[package]
name = "rusty-chain"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
anyhow = "1.0.97"
env_logger = "0.11.7"
hash = "0.3.0"
hex = "0.4.3"
hex-literal = "1.0.0"
log = "0.4.26"
sha2 = "0.10.8"
